<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/titleTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:text="@string/app_name"
        android:textSize="48sp" />

    <EditText
        android:id="@+id/txtBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:ems="10"
        android:hint="@string/hint1"
        android:inputType="number" />

    <Spinner
        android:id="@+id/operatorAssigner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="210dp"
        android:entries="@array/operators" />

    <EditText
        android:id="@+id/txtBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="280dp"
        android:ems="10"
        android:hint="@string/hint2"
        android:inputType="number" />

    <Button
        android:id="@+id/calcBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="335dp"
        android:text="@string/calcBtn"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="410dp"
        android:text="@string/resultTxt"
        android:textSize="36sp" />

</RelativeLayout>